# python-spgill-backup

./: .gitignore  Dockerfile  README.md  build-docker.sh  custom.dockerignore  requirements.txt  setup.cfg  setup.py
package-scripts/: build-package.sh
spgill/backup/: __init__.py  __main__.py  cli.py  command.py  config.py  helper.py  model.py  schema.py
