[metadata]
name = python-spgill-backup
version = file: VERSION
long_description = file: README.md
author = Samuel P. Gillispie II
author_email = samuel@spgill.me
url = https://github.com/spgill/python-spgill-backup
license = MIT
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.8
packages = find_namespace:
install_requires =
    click
    colorama
    humanize
    PyYAML
    sh

[options.packages.find]
include = spgill.*

[options.entry_points]
console_scripts =
    spgill-backup = spgill.backup:cli

[bdist_wheel]
universal = 0
