[metadata]
name = python-spgill-backup
version = file: VERSION
long_description = file: README.md
author = Samuel P. Gillispie II
author_email = samuel@spgill.me
url = https://github.com/spgill/python-spgill-backup
license = MIT
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.8
packages = find_namespace:
install_requires =
    apscheduler
    click
    humanize
    mergedeep
    pydantic
    PyYAML
    rich
    sh >= 2.0
    typer >= 0.12.3

[options.packages.find]
include = spgill.*

[options.entry_points]
console_scripts =
    spgill-backup = spgill.backup.cli:app

[bdist_wheel]
universal = 0
